二叉树的遍历，求树高，求叶子数

--- a/BinaryTree/BinaryTree.vcxproj
+++ b/BinaryTree/BinaryTree.vcxproj
@@ -115,6 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BinaryTree.c" />
+    <ClCompile Include="LinkStack.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LinkStack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
